@@ -3,6 +3,9 @@ CHANGES
 =======
 0.2.5 (unreleased)
 ------------------
+- Expose shipping and billing names to the email template
+- Expose organization to the email template
+- update the default email template
 
 0.2.4 (2009-05-27)
 ------------------
